--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
         text-align: center;
       }
 
-      h1 {
-        margin-top: 0;
-      }
-
       #flag-container {
         display: inline-block;
         margin-top: 1em;
@@ -37,7 +33,7 @@
     <form action="#" method="post">
       <div id="flag-container">
         <img id="flag" src="" alt="Flag">
-        <input type="text" id="guess" name="guess" placeholder="Enter your guess">
+        <br><input type="text" id="guess" name="guess" placeholder="Enter your guess"></br>
         <button type="submit" name="submit">Submit</button>
         <button type="button" id="skip">Skip</button>
       </div>
