--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">  
     <meta charset="utf-8">
     <title>Guess the Flag</title>
     <style>
       body {
         text-align: center;
+        font-family: 'Montserrat', sans-serif;
+        background-color: #DBF9FC;
       }
 
       #flag-container {
@@ -16,7 +21,7 @@
 
       #flag {
         max-width: 100%;
-        max-height: 300px;
+        max-height: 100%;
       }
 
       #guess {
@@ -33,7 +38,7 @@
     <form action="#" method="post">
       <div id="flag-container">
         <img id="flag" src="" alt="Flag">
-        <br><input type="text" id="guess" name="guess" placeholder="Enter your guess"></br>
+        <br><input type="text" id="guess" name="guess" placeholder="Enter your guess"></div><br>
         <button type="submit" name="submit">Submit</button>
         <button type="button" id="skip">Skip</button>
       </div>
