--- a/index.html
+++ b/index.html
@@ -289,17 +289,17 @@
       {name: "Philippines", answers: ["philippines", "republic of the philippines"]},
       {name: "Egypt", answers: ["egypt", "arab republic of egypt"]},
       {name: "Vietnam", answers: ["vietnam", "socialist republic of vietnam"]},
-      {name: "Democratic Republic of the Congo", answers: ["congo", "democratic republic of the congo"]},
+      {name: "Democratic Republic of the Congo", answers: ["congo", "democratic republic of the congo", "drc"]},
       {name: "Iran", answers: ["iran", "islamic republic of iran"]},
       {name: "Turkey", answers: ["turkey", "republic of turkey"]},
       {name: "Germany", answers: ["germany", "federal republic of germany"]},
       {name: "Thailand", answers: ["thailand", "kingdom of thailand"]},
-      {name: "United Kingdom", answers: ["united kingdom", "uk", "great britain"]},
+      {name: "United Kingdom", answers: ["united kingdom", "uk", "great britain", "britain","gb"]},
       {name: "France", answers: ["france", "french republic"]},
       {name: "Italy", answers: ["italy", "italian republic"]},
       {name: "Myanmar", answers: ["myanmar", "republic of the union of myanmar"]},
       {name: "England", answers: ["england"]},
-      {name: "South Africa", answers: ["south africa", "republic of south africa"]},
+      {name: "South Africa", answers: ["south africa", "republic of south africa", "rsa"]},
       {name: "Tanzania", answers: ["tanzania", "united republic of tanzania"]},
       {name: "South Korea", answers: ["south korea", "republic of korea"]},
       {name: "Spain", answers: ["spain", "kingdom of spain"]},
@@ -328,10 +328,10 @@
       {name: "North Korea", answers: ["north korea", "dprk"]},
       {name: "Madagascar", answers: ["madagascar"]},
       {name: "Cameroon", answers: ["cameroon"]},
-      {name: "Côte d'Ivoire", answers: ["cote d'ivoire", "ivory coast"]},
+      {name: "Côte d'Ivoire", answers: ["cote d'ivoire", "ivory coast", "cote d ivoire",]},
       {name: "Taiwan", answers: ["taiwan"]},
       {name: "Australia", answers: ["australia"]},
-      {name: "Sri Lanka", answers: ["sri lanka"]},
+      {name: "Sri Lanka", answers: ["sri lanka", "ceylon"]},
       {name: "Romania", answers: ["romania"]},
       {name: "Burkina Faso", answers: ["burkina faso"]},
       {name: "Syria", answers: ["syria"]},
@@ -374,22 +374,22 @@
       {name: "Tajikistan", answers: ["tajikistan"]},
       {name: "Switzerland", answers: ["switzerland"]},
       {name: "Togo", answers: ["togo"]},
-      {name: "Hong Kong", answers: ["hongkong", "hong kong"]},
+      {name: "Hong Kong", answers: ["hong kong", "hongkong"]},
       {name: "Laos", answers: ["laos"]},
       {name: "Serbia", answers: ["serbia"]},
       {name: "Bulgaria", answers: ["bulgaria"]},
       {name: "Paraguay", answers: ["paraguay"]},
-      {name: "Papua New Guinea", answers: ["papua-new-guinea"]},
+      {name: "Papua New Guinea", answers: ["papua new guinea", "papua-new-guinea"]},
       {name: "Libya", answers: ["libya"]},
       {name: "Lebanon", answers: ["lebanon"]},
-      {name: "El Salvador", answers: ["el-salvador"]},
-      {name: "Sierra Leone", answers: ["sierra-leone"]},
-      {name: "United Arab Emirates", answers: ["united-arab-emirates", "uae"]},
+      {name: "El Salvador", answers: ["el salvador","el-salvador", "salvador"]},
+      {name: "Sierra Leone", answers: ["sierra leone","sierra-leone"]},
+      {name: "United Arab Emirates", answers: ["united arab emirates","united-arab-emirates", "uae", "dubai", "abu dhabi"]},
       {name: "Nicaragua", answers: ["nicaragua"]},
       {name: "Eritrea", answers: ["eritrea"]},
       {name: "Singapore", answers: ["singapore"]},
       {name: "Kyrgyzstan", answers: ["kyrgyzstan"]},
-      {name: "Central African Republic", answers: ["central-african-republic"]},
+      {name: "Central African Republic", answers: ["central african republic","central-african-republic"]},
       {name: "Denmark", answers: ["denmark"]},
       {name: "Finland", answers: ["finland"]},
       {name: "Slovakia", answers: ["slovakia"]},
@@ -397,20 +397,20 @@
       {name: "Norway", answers: ["norway"]},
       {name: "Scotland", answers: ["scotland"]},
       {name: "Ireland", answers: ["ireland"]},
-      {name: "Congo (Republic of the)", answers: ["congo-republic-of-the"]},
-      {name: "Costa Rica", answers: ["costa-rica"]},
+      {name: "Congo (Republic of the)", answers: ["congo (republic of the)","congo-republic-of-the", "congo-brazzaville", "congo republic of the", "congo republic", "congo republic of the (brazzaville)","congo", "republic of the congo", "republic of congo", "republic of the congo (brazzaville)"]},
+      {name: "Costa Rica", answers: ["costa rica", "costa-rica"]},
       {name: "Georgia", answers: ["georgia"]},
       {name: "Liberia", answers: ["liberia"]},
       {name: "Palestine", answers: ["palestine"]},
-      {name: "New Zealand", answers: ["new-zealand"]},
+      {name: "New Zealand", answers: ["new zealand", "aotearoa", "aotearoa new zealand", "new zealand (aotearoa)"]},
       {name: "Croatia", answers: ["croatia"]},
       {name: "Mauritania", answers: ["mauritania"]},
       {name: "Panama", answers: ["panama"]},
-      {name: "Bosnia and Herzegovina", answers: ["bosnia-and-herzegovina"]},
+      {name: "Bosnia and Herzegovina", answers: ["bosnia and herzegovina", "bosnia-and-herzegovina", "bosnia and herzegovina (bosnia and herzegovina)"]},
       {name: "Moldova", answers: ["moldova"]},
       {name: "Oman", answers: ["oman"]},
       {name: "Uruguay", answers: ["uruguay"]},
-      {name: "Puerto Rico", answers: ["puerto-rico"]},
+      {name: "Puerto Rico", answers: ["puerto rico","puerto-rico"]},
       {name: "Mongolia", answers: ["mongolia", "mongolian people's republic"]},
       {name: "Wales", answers: ["wales"]},
       {name: "Albania", answers: ["albania", "republic of albania"]},
@@ -427,9 +427,9 @@
       {name: "Lesotho", answers: ["lesotho", "kingdom of lesotho"]},
       {name: "Latvia", answers: ["latvia", "republic of latvia"]},
       {name: "Kosovo", answers: ["kosovo", "republic of kosovo"]},
-      {name: "St. Patrick", answers: ["st. patrick"]},
+      {name: "St. Patrick", answers: ["st. patrick", "st patrick","saint patrick"]},
       {name: "Northern Ireland", answers: ["northern ireland"]},
-      {name: "Guinea-Bissau", answers: ["guinea-bissau", "republic of guinea-bissau"]},
+      {name: "Guinea-Bissau", answers: ["guinea bissau", "guinea-bissau", "republic of guinea-bissau", "republic of guinea bissau"]},
       {name: "Gabon", answers: ["gabon", "gabonese republic"]},
       {name: "Eswatini", answers: ["eswatini", "kingdom of eswatini"]},
       {name: "Bahrain", answers: ["bahrain", "kingdom of bahrain"]},
@@ -437,7 +437,7 @@
       {name: "East Timor", answers: ["east timor", "timor-leste", "democratic republic of timor-leste"]},
       {name: "Estonia", answers: ["estonia", "republic of estonia"]},
       {name: "Cyprus", answers: ["cyprus", "republic of cyprus"]},
-      {name: "Trinidad and Tobago", answers: ["trinidad and tobago"]},
+      {name: "Trinidad and Tobago", answers: ["trinidad and tobago", "trinidad-and-tobago", "trinidad & tobago"]},
       {name: "Fiji", answers: ["fiji", "republic of fiji"]},
       {name: "Djibouti", answers: ["djibouti", "republic of djibouti"]},
       {name: "Comoros", answers: ["comoros", "union of the comoros"]},
@@ -470,17 +470,17 @@
       {name: "Kiribati", answers: ["kiribati", "republic of kiribati"]},
       {name: "Tonga", answers: ["tonga", "kingdom of tonga"]},
       {name: "Micronesia", answers: ["micronesia", "federated states of micronesia"]},
-      {name: "Saint Vincent and the Grenadines", answers: ["saint vincent and the grenadines"]},
+      {name: "Saint Vincent and the Grenadines", answers: ["saint vincent and the grenadines", "saint vincent & the grenadines"]},
       {name: "Antigua and Barbuda", answers: ["antigua and barbuda"]},
       {name: "Seychelles", answers: ["seychelles", "republic of seychelles"]},
       {name: "Andorra", answers: ["andorra", "principality of andorra"]},
       {name: "Marshall Islands", answers: ["marshall islands", "republic of the marshall islands"]},
       {name: "Dominica", answers: ["dominica", "commonwealth of dominica"]},
       {name: "Greenland", answers: ["greenland", "kalaallit nunaat"]},
-      {name: "Saint Kitts and Nevis", answers: ["saint kitts and nevis", "federation of saint christopher and nevis"]},
+      {name: "Saint Kitts and Nevis", answers: ["saint kitts and nevis", "federation of saint christopher and nevis", "saint kitts & nevis"]},
       {name: "Northern Mariana Islands", answers: ["northern mariana islands"]},
       {name: "Faroe Islands", answers: ["faroe islands", "faeroe islands", "foroyar"]},
-      {name: "St. Martin", answers: ["st. martin"]},
+      {name: "St. Martin", answers: ["st. martin", "saint martin", "st martin"]},
       {name: "Liechtenstein", answers: ["liechtenstein", "principality of liechtenstein"]},
       {name: "San Marino", answers: ["san marino", "republic of san marino"]},
       {name: "Monaco", answers: ["monaco"]},
@@ -491,7 +491,7 @@
       {name: "Sint Eustatius", answers: ["sint eustatius"]},
       {name: "Saba", answers: ["saba"]},
       {name: "Niue", answers: ["niue"]},
-      {name: "Vatican City", answers: ["vatican city", "holy see"]}
+      {name: "Vatican City", answers: ["vatican city", "holy see", "the vatican city"]},
       ];
       const flagContainer = document.getElementById("flag-container");
       const flagImg = document.getElementById("flag");
