--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">  
     <meta charset="utf-8">
-    <title>Guess the Flag</title>
+    <title>Guess the Flag-1</title>
     <style>
       body {
         text-align: center;
@@ -22,28 +22,43 @@
 
       #flag {
         max-width: 100%;
-        max-height: 100%;
+        height: 200px;
       }
 
       #guess {
         margin-top: 1em;
+        touch-action: manipulation;
+        outline: none;
+        border: none;
+        width: 75%;
+        height: 2em;
+        border-radius: 0.5em;
+        text-align: center;
       }
 
       #skip {
         margin-top: 1em;
         touch-action: manipulation;
+        user-select: none;
       }
+
+      #reveal {
+        margin-top: 1em;
+        touch-action: manipulation;
+        user-select: none;
+      }
+
     </style>
   </head>
   <body>
     <h1>Guess the Flag</h1>
     <form action="#" method="post">
       <div id="flag-container">
-        <img id="flag" src="" alt="Flag">
-        <br><input type="text" id="guess" name="guess" placeholder="Enter your guess"></div><br>
-        <button type="submit" name="submit">Submit</button>
+        <div><img id="flag" src="" alt="Flag"></div>
+        <div><input type="text" id="guess" name="guess" placeholder="Enter your guess"></div>
+        <div><button type="submit" name="submit">Submit</button>
         <button type="button" id="skip">Skip</button>
-        <button type="button" id="reveal">Reveal</button>
+        <button type="button" id="reveal">Reveal</button></div>
       </div>
     </form>
     <p id="result"></p>
@@ -555,6 +570,12 @@
       skipButton.addEventListener("click", skipFlag);
       const revealButton = document.getElementById("reveal");
       revealButton.addEventListener("click", revealAnswer);
+      
+      document.addEventListener("keydown", function(event) {
+        if (event.keyCode === 39) { // right arrow key
+          skipButton.click(); // trigger a click event on the skip button
+        }
+      });
 
       // display the first flag
       displayFlag(currentCountry);
