--- a/index.html
+++ b/index.html
@@ -5,50 +5,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">  
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Guess the Flag-1</title>
-    <style>
-      body {
-        text-align: center;
-        font-family: 'Montserrat', sans-serif;
-        background-color: #DBF9FC;
-      }
-
-      #flag-container {
-        display: inline-block;
-        margin-top: 1em;
-        position: relative;
-      }
-
-      #flag {
-        max-width: 100%;
-        height: 200px;
-      }
-
-      #guess {
-        margin-top: 1em;
-        touch-action: manipulation;
-        outline: none;
-        border: none;
-        width: 75%;
-        height: 2em;
-        border-radius: 0.5em;
-        text-align: center;
-      }
-
-      #skip {
-        margin-top: 1em;
-        touch-action: manipulation;
-        user-select: none;
-      }
-
-      #reveal {
-        margin-top: 1em;
-        touch-action: manipulation;
-        user-select: none;
-      }
-
-    </style>
   </head>
   <body>
     <h1>Guess the Flag</h1>
