--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     <form action="#" method="post">
         <div id="flag-container">
             <div><img id="flag" src="" alt="Flag"></div>
-            <div><input type="text" id="guess" name="guess" placeholder="Enter your guess"></div>
             <div><button type="submit" name="submit">Submit</button>
-            <button type="button" id="skip">Skip</button>
-            <button type="button" id="reveal">Reveal</button></div>
+                <button type="button" id="skip">Skip</button>
+                <button type="button" id="reveal">Reveal</button></div>
+                <div id="guess-container">
+                    <input type="text" id="guess" name="guess" placeholder="Enter your guess" onInput="filterSuggestions()">
+                    <div id="suggestions" class="suggestions"></div>
+                </div>                
         </div>
     </form>
     <p id="result"></p>
